# openelections-sources-la

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: get-election-data.yml  send-data.yml
.nova/: Configuration.json
data/: README.md
data/1982/: 19820911.xlsx  19821102.xlsx
data/1983/: 19831022.xlsx  19831119.xlsx
data/1984/: 19840929.xlsx
data/1985/: 19850330.xlsx
data/1986/: 19860118.xlsx  19860201.xlsx  19860405.xlsx  19860503.xlsx  19860719.xlsx  19860927.xlsx  19861104.xlsx
data/1987/: 19870307.xlsx  19870404.xlsx  19871024.xlsx  19871121.xlsx
data/1988/: 19880308.xlsx  19880416.xlsx  19880604.xlsx  19881001.xlsx  19881108.xlsx
data/1989/: 19890121.xlsx  19890218.xlsx  19890401.xlsx  19890429.xlsx  19891007.xlsx  19891118.xlsx
data/1990/: 19900120.xlsx  19900203.xlsx  19900303.xlsx  19900310.xlsx  19900407.xlsx  19900505.xlsx  19901006.xlsx  19901106.xlsx  19901208.xlsx
data/1991/: 19910223.xlsx  19910323.xlsx  19910420.xlsx  19910504.xlsx  19910713.xlsx  19910831.xlsx  19910914.xlsx  19911019.xlsx  19911116.xlsx  19911214.xlsx
data/1992/: 19920118.xlsx  19920310.xlsx  19920411.xlsx  19920509.xlsx  19920613.xlsx  19920718.xlsx  19921003.xlsx  19921103.xlsx  19921205.xlsx
meta/: README.md
pelbot/: .env-template  README.md  pyproject.toml  run.py  source_research.md
pelbot/app/: __init__.py  historical.py  live.py
pelbot/app/history_class/: __init__.py  bob.py  request.py
pelbot/app/utils/: __init__.py  load_yaml.py  logging.py
pelbot/config/: README.md  elections.yml  geo.yml  main.yml  sources.yml
(+248 files in other folders)
